# Spelunky2X64DbgPlugin

./: CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  clang-format.yml  continous_integration.yml  json-parser.yml  prettier.yml
config/: pluginconfig.h.in
include/: Configuration.h  JsonNameDefinitions.h  QtPlugin.h  Spelunky2.h  pluginmain.h  read_helpers.h
include/Data/: CPPGenerator.h  CharacterDB.h  Entity.h  EntityDB.h  EntityList.h  IDNameList.h  Logger.h  OldStdList.h  ParticleDB.h  State.h  StdList.h  StdMap.h  StdString.h  StdUnorderedMap.h  StringsTable.h  TextureDB.h  VirtualTableLookup.h
include/QtHelpers/: AbstractContainerView.h  AbstractDatabaseView.h  CPPSyntaxHighlighter.h  DatabaseHelper.h  DialogEditSimpleValue.h  DialogEditState.h  DialogEditString.h  ItemModelGatherVirtualData.h  ItemModelLoggerFields.h  ItemModelLoggerSamples.h  ItemModelStates.h  ItemModelVirtualFunctions.h  ItemModelVirtualTable.h  LineEditEx.h  LongLongSpinBox.h  QStrFromStringView.h  SortFilterProxyModelStringsTable.h  StyledItemDelegateColorPicker.h  StyledItemDelegateHTML.h  TableViewLogger.h  TableWidgetItemNumeric.h  TreeViewMemoryFields.h  TreeWidgetItemNumeric.h  WidgetAutorefresh.h  WidgetDatabaseView.h  WidgetMemoryView.h  WidgetPagination.h  WidgetSamplesPlot.h  WidgetSampling.h  WidgetSpelunkyLevel.h  WidgetSpelunkyRooms.h
include/Views/: ViewCharacterDB.h  ViewCpp.h  ViewEntities.h  ViewEntity.h  ViewEntityDB.h  ViewEntityFactory.h  ViewEntityList.h  ViewGameManager.h  ViewJournalPage.h  ViewLevelGen.h  ViewLogger.h  ViewOnline.h  ViewParticleDB.h  ViewSaveGame.h  ViewSaveStates.h  ViewSettings.h  ViewState.h  ViewStdList.h  ViewStdMap.h  ViewStdUnorderedMap.h  ViewStdVector.h  ViewStringsTable.h  ViewStruct.h  ViewTextureDB.h  ViewThreads.h  ViewToolbar.h  ViewVirtualFunctions.h  ViewVirtualTable.h
resources/: EntitySubclasses.json  RoomCodes.json  Spelunky2.json  Spelunky2Entities.json  Spelunky2RoomCodes.json  Structs.json  spelunky2.qrc
src/: Configuration.cpp  QtPlugin.cpp  Spelunky2.cpp  pluginmain.cpp
src/Data/: CPPGenerator.cpp  Entity.cpp  EntityDB.cpp  IDNameList.cpp  Logger.cpp  Lookup.cpp  ParticleDB.cpp  State.cpp  StringsTable.cpp  TextureDB.cpp  VirtualTableLookup.cpp
src/QtHelpers/: AbstractContainerView.cpp  AbstractDatabaseView.cpp  CPPSyntaxHighlighter.cpp  DatabaseHelper.cpp  DialogEditSimpleValue.cpp  DialogEditState.cpp  DialogEditString.cpp  ItemModelGatherVirtualData.cpp  ItemModelLoggerFields.cpp  ItemModelLoggerSamples.cpp  ItemModelVirtualFunctions.cpp  ItemModelVirtualTable.cpp  SortFilterProxyModelStringsTable.cpp  StyledItemDelegateHTML.cpp  TableViewLogger.cpp  TreeViewMemoryFields.cpp  WidgetAutorefresh.cpp  WidgetDatabaseView.cpp  WidgetMemoryView.cpp  WidgetSamplesPlot.cpp  WidgetSpelunkyLevel.cpp  WidgetSpelunkyRooms.cpp
src/Views/: ViewCharacterDB.cpp  ViewCpp.cpp  ViewEntities.cpp  ViewEntity.cpp  ViewEntityDB.cpp  ViewEntityList.cpp  ViewGameManager.cpp  ViewJournalPage.cpp  ViewLevelGen.cpp  ViewLogger.cpp  ViewOnline.cpp  ViewParticleDB.cpp  ViewSaveGame.cpp  ViewSaveStates.cpp  ViewSettings.cpp  ViewState.cpp  ViewStdList.cpp  ViewStdMap.cpp  ViewStdUnorderedMap.cpp  ViewStdVector.cpp  ViewStringsTable.cpp  ViewStruct.cpp  ViewTextureDB.cpp  ViewThreads.cpp  ViewToolbar.cpp  ViewVirtualFunctions.cpp  ViewVirtualTable.cpp
